# OpenCV-Beziers

./: CMakeCache.txt  CMakeLists.txt  Makefile  README  bezier.cpp  bezier.h  btest  cmake_install.cmake  input.txt  main  main.cpp
